--- a/index.html
+++ b/index.html
@@ -42,7 +42,60 @@
     </div>
   </header>
 
+  <main class="main">
+
+  </main>
+
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-info">
+        <p class="copyright">
+          &copy; <span id="year"></span>. All rights reserved.
+        </p>
+        <p class="created-with-love">
+          Created with <span role="img" aria-label="love">❤️</span>
+        </p>
+      </div>
+      
+      <nav class="footer-socials" aria-label="Social Media">
+        <ul class="footer-socials-list">
+          <li class="footer-socials-list-item">
+            <a href="#" class="footer-social-link" id="facebook-link" target="_blank" rel="noopener" aria-label="Facebook">
+              <i class="ri-facebook-circle-line"></i>
+            </a>
+          </li>
+          <li class="footer-socials-list-item">
+            <a href="#" class="footer-social-link" id="instagram-link" target="_blank" rel="noopener" aria-label="Instagram">
+              <i class="ri-instagram-line"></i>
+            </a>
+          </li>
+          <li class="footer-socials-list-item">
+            <a href="#" class="footer-social-link" id="youtube-link" target="_blank" rel="noopener" aria-label="YouTube">
+              <i class="ri-youtube-line"></i>
+            </a>
+          </li>
+          <li class="footer-socials-list-item">
+            <a href="#" class="footer-social-link" id="linkedin-link" target="_blank" rel="noopener" aria-label="LinkedIn">
+              <i class="ri-linkedin-box-line"></i>
+            </a>
+          </li>
+          <li class="footer-socials-list-item">
+            <a href="#" class="footer-social-link" id="tiktok-link" target="_blank" rel="noopener" aria-label="TikTok">
+              <i class="ri-tiktok-line"></i>
+            </a>
+          </li>
+          <li class="footer-socials-list-item">
+            <a href="#" class="footer-social-link" id="x-link" target="_blank" rel="noopener" aria-label="X (Twitter)">
+              <i class="ri-twitter-x-line"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
+
   <div class="navbar-overlay" id="navbar-overlay"></div>
   <script src="js/modules/navbar.js"></script>
+  <script src="js/modules/footer.js"></script>
 </body>
 </html>
