--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
         <p class="copyright">
           &copy; <span id="year"></span>. All rights reserved.
         </p>
-        <p class="created-with-love">
-          Created with <span role="img" aria-label="love">❤️</span>
-        </p>
+        
+        <div class="footer-contact">
+          <a href="tel:+1234567890" class="footer-contact-link">
+            <i class="ri-phone-line"></i> +1 (234) 567-890
+          </a>
+          <a href="mailto:hello@ngo.org" class="footer-contact-link">
+            <i class="ri-mail-line"></i> hello@ngo.org
+          </a>
+        </div>
       </div>
       
       <nav class="footer-socials" aria-label="Social Media">
