--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
         <div class="footer-contact">
           <a href="tel:+1234567890" class="footer-contact-link">
-            <i class="ri-phone-line"></i> +1 (234) 567-890
+            <i class="ri-phone-line"></i> +212 661480849
           </a>
           <a href="mailto:hello@ngo.org" class="footer-contact-link">
             <i class="ri-mail-line"></i> hello@ngo.org
