--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="footer-container">
       <div class="footer-info">
         <p class="copyright">
-          &copy; <span id="year"></span>. All rights reserved.
+          <i class="ri-copyright-line"></i> <span id="year"></span>. All rights reserved.
         </p>
         
         <div class="footer-contact">
