--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         </p>
         
         <div class="footer-contact">
-          <a href="tel:+1234567890" class="footer-contact-link">
+          <div class="phone-number">
             <i class="ri-phone-line"></i> +212 661480849
-          </a>
-          <a href="mailto:hello@ngo.org" class="footer-contact-link">
+          </div>
+          <div class="email-address">
             <i class="ri-mail-line"></i> hello@ngo.org
-          </a>
+          </div>
         </div>
       </div>
       
